Document M0 spike findings and engine timings
docs/m0-findings.md records all six M0 checklist outcomes (items 1,2,3,5,6 PASS primary;
item 4 fallback-applied), measured timings (cold start 1956 ms vs NFR-01 5 s target, warm
render median 30 ms vs 700 ms budget, repo rebuild ~9 ms), and the 159.9 MB download.
ENGINE_SURFACE.md checklist filled in; STATE.md handoff updated to "Phase 1 (M0) complete".

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>